Introduced log directory configuration, refactored `Logger` for log rotation and empty log deletion, enhanced error handling in `Growls`, and updated unit tests for log folder usage.